--- a/SpellChecker/app/src/main/res/layout/activity_detail.xml
+++ b/SpellChecker/app/src/main/res/layout/activity_detail.xml
@@ -31,6 +31,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/imageView2"
         android:text="TextView" />
 
 </RelativeLayout>
